Created TeamLead branch

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <h1>This branch is for testing before merge to Master branch!!!</h1>
+    <h1>This branch is created for TeamLead!</h1>
 </body>
 </html>
