Abubakr first commit

--- a/index.html
+++ b/index.html
@@ -1,22 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>InteriorDesignStudio</title>
 
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Fontawesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="./assets/css/style.css">
-</head>
-<body>
-    <h1>This branch is created for Abubakr!!!</h1>
-</body>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
+  <body>
+    <div class="we-work-part">
+      <div class="container">
+        <div class="heading">
+          <h2>How We Work</h2>
+
+          <div class="more">
+            <div class="line"></div>
+            <span>OUR WORKFLOW</span>
+          </div>
+        </div>
+
+        <div class="work-cards">
+          <div class="work-card">
+            <div class="work-card__img"></div>
+
+            <div class="work-card__text">
+              <div class="mini-card-heading">
+                <h3>Planning</h3>
+                <span>01</span>
+              </div>
+
+              <p>
+                One key part of the strategic planning is to understand your
+                goals and budget.
+              </p>
+            </div>
+          </div>
+
+          <div class="work-card">
+            <div class="work-card__img"></div>
+
+            <div class="work-card__text">
+              <div class="mini-card-heading">
+                <h3>Concept</h3>
+                <span>02</span>
+              </div>
+
+              <p>
+                We create sketches, we use the paper set of floor plans, and we
+                start to the space planning.
+              </p>
+            </div>
+          </div>
+
+          <div class="work-card">
+            <div class="work-card__img"></div>
+
+            <div class="work-card__text">
+              <div class="mini-card-heading">
+                <h3>Design</h3>
+                <span>03</span>
+              </div>
+
+              <p>
+                This is the phase in which we proceed to the details of the
+                design.
+              </p>
+            </div>
+          </div>
+
+          <div class="work-card">
+            <div class="work-card__img"></div>
+
+            <div class="work-card__text">
+              <div class="mini-card-heading">
+                <h3>Installation</h3>
+                <span>04</span>
+              </div>
+
+              <p>
+                After we`ve done about the details of the design, we start to
+                work with our labor.
+              </p>
+            </div>
+          </div>
+
+          <div class="work-card">
+            <div class="work-card__img"></div>
+
+            <div class="work-card__text">
+              <div class="mini-card-heading">
+                <h3>Planning</h3>
+                <span>01</span>
+              </div>
+
+              <p>
+                One key part of the strategic planning is to understand your
+                goals and budget.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="our-clients">
+      <div class="container">
+        <div class="heading">
+          <h2>Reviews from Our Clients</h2>
+          <div class="more">
+            <div class="line"></div>
+            <span>OUR CLIENT SAYS</span>
+          </div>
+        </div>
+
+        <div class="clients-slider">
+          <div class="client-img"></div>
+
+          <div class="client-info">
+            <h2>Mr. Leonardo</h2>
+            <h4>Remote Programmer</h4>
+            <p>
+              “Modern desk style featured with tropical stuff with plant and the
+              lighting for a warm, and comforting take on interior design
+              minimalist. I love this design!. Thanks Interiorqu.”
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
