update form section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,43 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <h1>This branch is created for TeamLead!</h1>
+    <!-- Form -->
+    <section class="form">
+        <div class="container">
+            <div class="wrapper">
+                <div class="form__content">
+                    <h2 class="form__title">Interested to Work With Us?</h2>
+                    <p class="form__text">Fill the form and send the type of your room and tell us what you need for your future room, then wait until we reply it.</p>
+                    <span class="form__line"></span>
+                </div>
+
+                <form action="https://echo.htmlacademy.ru/" class="form__card">
+                    <label for="name">
+                        <p>Name</p>
+                        <input type="text" name="name" id="name" placeholder="Enter your name" required aria-label="Enter your name">
+                    </label>
+
+                    <label for="email">
+                        <p>Email Address</p>
+                        <input type="email" name="email" id="email" placeholder="Email address" required aria-label="Email address">
+                    </label>
+
+                    <label for="room">
+                        <p>Type room</p>
+                        <input type="text" name="roomType" id="room" placeholder="Enter type room" required aria-label="Enter type room">
+                    </label>
+
+                    <label for="tellUs">
+                        <p>Tell us</p>
+                        <input type="text" name="Tell us:" id="tellUs" placeholder="Tell us what you need" required aria-label="Tell us what you need"></input>
+                    </label>
+
+                    <div class="submit__btn">
+                        <button type="submit" class="btn">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
