created footer section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <!-- Form -->
+    <!-- Form section -->
     <section class="form">
         <div class="container">
             <div class="wrapper">
@@ -55,5 +55,12 @@
             </div>
         </div>
     </section>
+
+    <!-- Footer -->
+    <div class="footer">
+        <div class="my-container">
+            <h2>Newsletter</h2>
+        </div>
+    </div>
 </body>
 </html>
