Add 3 new files and change scss, css, html files

--- a/index.html
+++ b/index.html
@@ -1,22 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>InteriorDesignStudio</title>
 
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Fontawesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="./assets/css/style.css">
-</head>
-<body>
-    <h1>This branch is created for Asadullo!!!</h1>
-</body>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
+  <body>
+    <header>
+      <div class="logo">
+        <a href="#">Interiorqu.</a>
+      </div>
+      <div class="lab">
+        <ul class="menu">
+          <li><a href="#">Home</a> <span></span></li>
+          <li><a href="#">Workflow</a></li>
+          <li><a href="#">Reviews</a></li>
+          <li><a href="#">Project</a></li>
+        </ul>
+        <form action="">
+          <button type="submit" class="btn0">Contact Us</button>
+        </form>
+      </div>
+      <input type="checkbox" name="" class="switcher" id="menu" />
+      <label for="menu" class="open">
+        <i class="fa fa-bars fa-2xs"></i>
+      </label>
+      <nav>
+        <ul class="menu">
+          <i class="fa-solid fa-headset fa-2xl"></i>
+          <div class="bo">
+            <li><a href="#">Home</a> <span></span></li>
+            <li><a href="#">Workflow</a></li>
+            <li><a href="#">Reviews</a></li>
+            <li><a href="#">Project</a></li>
+          </div>
+          <i class="fa-solid fa-at fa-2xl"></i>
+        </ul>
+      </nav>
+      <label for="menu" class="close">
+        <i class="fa fa-times"></i>
+      </label>
+    </header>
+    <div class="container">
+      <div class="showcase">
+        <h1>Refresh your Room and Make Awesome Interior Design With Us!</h1>
+        <p>
+          We are Interior Design Team Based in Wakanda, 58th street East Waka.
+          We provide Interior Design services since 1899 and have many client
+          from various country.
+        </p>
+        <button type="submit" class="btn">Get Started</button>
+        <div class="case">
+          <div class="box box1">
+            <div class="left">
+              <p>52+</p>
+            </div>
+            <div class="right">
+              <p>Satisfied Clients From Various Country.</p>
+            </div>
+          </div>
+          <div class="box box2">
+            <div class="left">
+              <p>15+</p>
+            </div>
+            <div class="right">
+              <p>Years of Experience in Interior Design</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
