Add Latest Project section and make it responsive

--- a/index.html
+++ b/index.html
@@ -17,6 +17,65 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <!-- Latest Project -->
+    <section class="latestProject">
+      <div class="container">
+        <div class="latestProject__intro">
+          <h2 class="latestProject__title">The Latest Project</h2>
+
+          <div class="latestProject__gallery-text">
+            <span class="latestProject__line"></span>
+            <p>OUR MINI GALLERY</p>
+            <span class="latestProject__line"></span>
+          </div>
+        </div>
+
+        <div class="latestProject__cards">
+          <div class="latestProject__card">
+            <div class="latestProject__card-content">
+              <h3 class="latestProject__card-title">
+                The Tropical Workspace Style
+              </h3>
+              <p class="latestProject__card-text">
+                Tropical style is all about comfort, ease and utility and is eclectic by definition. The style is characterized by warm and colors drawn mostly from lighting.
+              </p>
+              <a href="#" class="btn latestProject__readMore-btn">Read more</a>
+            </div>
+
+            <div class="latestProject__card-img"></div>
+          </div>
+
+          <div class="latestProject__card">
+            <div class="latestProject__card-img"></div>
+
+            <div class="latestProject__card-content">
+              <h3 class="latestProject__card-title">
+                The Modern Wood Classic Style
+              </h3>
+              <p class="latestProject__card-text">
+                Modern wood style features dynamic layers of the rugged and the organic for a warm, and comforting take on interior design classics. 
+              </p>
+              <a href="#" class="btn latestProject__readMore-btn">Read more</a>
+            </div>
+          </div>
+
+          <div class="latestProject__card">
+            <div class="latestProject__card-content">
+              <h3 class="latestProject__card-title">
+                The Minimalist Bedroom Style
+              </h3>
+              <p class="latestProject__card-text">
+                Minimalist style is all about comfort, ease and utility and is eclectic by definition. The style is characterized by calm and colors drawn with monochrome.
+              </p>
+              <a href="#" class="btn latestProject__readMore-btn">Read more</a>
+            </div>
+
+            <div class="latestProject__card-img"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Form section -->
     <section class="form">
         <div class="container">
