Make changes (padding and container)

--- a/index.html
+++ b/index.html
@@ -27,63 +27,67 @@
   </head>
   <body>
     <header>
-      <div class="logo">
-        <a href="#">Interiorqu.</a>
-      </div>
-      <div class="lab">
-        <ul class="menu">
-          <li><a href="#">Home</a> <span></span></li>
-          <li><a href="#">Workflow</a></li>
-          <li><a href="#">Reviews</a></li>
-          <li><a href="#">Project</a></li>
-        </ul>
-        <form action="">
-          <button type="submit" class="btn0">Contact Us</button>
-        </form>
-      </div>
-      <input type="checkbox" name="" class="switcher" id="menu" />
-      <label for="menu" class="open">
-        <i class="fa fa-bars fa-2xs"></i>
-      </label>
-      <nav>
-        <ul class="menu">
-          <i class="fa-solid fa-headset fa-2xl"></i>
-          <div class="bo">
+      <div class="container">
+        <div class="logo">
+          <a href="#">Interiorqu.</a>
+        </div>
+        <div class="lab">
+          <ul class="menu">
             <li><a href="#">Home</a> <span></span></li>
             <li><a href="#">Workflow</a></li>
             <li><a href="#">Reviews</a></li>
             <li><a href="#">Project</a></li>
-          </div>
-          <i class="fa-solid fa-at fa-2xl"></i>
-        </ul>
-      </nav>
-      <label for="menu" class="close">
-        <i class="fa fa-times"></i>
-      </label>
+          </ul>
+          <form action="">
+            <button type="submit" class="btn0">Contact Us</button>
+          </form>
+        </div>
+        <input type="checkbox" name="" class="switcher" id="menu" />
+        <label for="menu" class="open">
+          <i class="fa fa-bars fa-2xs"></i>
+        </label>
+        <nav>
+          <ul class="menu">
+            <i class="fa-solid fa-headset fa-2xl"></i>
+            <div class="bo">
+              <li><a href="#">Home</a> <span></span></li>
+              <li><a href="#">Workflow</a></li>
+              <li><a href="#">Reviews</a></li>
+              <li><a href="#">Project</a></li>
+            </div>
+            <i class="fa-solid fa-at fa-2xl"></i>
+          </ul>
+        </nav>
+        <label for="menu" class="close">
+          <i class="fa fa-times"></i>
+        </label>
+      </div>
     </header>
       <div class="showcase">
-        <h1>Refresh your Room and Make Awesome Interior Design With Us!</h1>
-        <p>
-          We are Interior Design Team Based in Wakanda, 58th street East Waka.
-          We provide Interior Design services since 1899 and have many client
-          from various country.
-        </p>
-        <button type="submit" class="btn">Get Started</button>
-        <div class="case">
-          <div class="box box1">
-            <div class="left">
-              <p>52+</p>
+        <div class="container">
+          <h1>Refresh your Room and Make Awesome Interior Design With Us!</h1>
+          <p>
+            We are Interior Design Team Based in Wakanda, 58th street East Waka.
+            We provide Interior Design services since 1899 and have many client
+            from various country.
+          </p>
+          <button type="submit" class="btn">Get Started</button>
+          <div class="case">
+            <div class="box box1">
+              <div class="left">
+                <p>52+</p>
+              </div>
+              <div class="right">
+                <p>Satisfied Clients From Various Country.</p>
+              </div>
             </div>
-            <div class="right">
-              <p>Satisfied Clients From Various Country.</p>
-            </div>
-          </div>
-          <div class="box box2">
-            <div class="left">
-              <p>15+</p>
-            </div>
-            <div class="right">
-              <p>Years of Experience in Interior Design</p>
+            <div class="box box2">
+              <div class="left">
+                <p>15+</p>
+              </div>
+              <div class="right">
+                <p>Years of Experience in Interior Design</p>
+              </div>
             </div>
           </div>
         </div>
